Mon, 22 May 2006 Amos Anderson
1.	Fixed a bug in gamess2qmcbeaver.py. It was mistakenly identifying
	bohr geometries as angstroms.

Mon, 16 May 2006 Amos Anderson
1.	I changed how IeeeMath checks for NaN.

2.	I cleaned a bunch of the non-source files.

Mon, 15 May 2006 Amos Anderson
An important note. There are quite a few changes here, many are "here to stay"
while others will be removed eventually. There are 3 significant changes: future
walking, nuclear forces, and system signalling. While the code seems to be working
well for me on all the systems that I've tried, I would say that this code should
be called "experimental", but because the vast majority of this code is close to
what it will eventually look like, in committing it to cvs, I don't want to create
a different branch that will be difficult to merge later. Instead, I've tagged all
the source files with "may_15_2006" in case you want to get the code as it was
before all these changes.

1.	In CubicSpline, the intitializers now use Array1D array copying.
	Also, added an integrate function.

2.	In LU.cpp, determinant_and_inverse changed the static arrays to
	the regular storage class since the static arrays caused problems
	when inverting matrices of different dimensions.
	
3.	Improved error handling in QMCConfigIO. Also, fixed a bug wrt when
	the files were opened in the course of a wavefunction optimization.

4.	QMCDerivativeProperties now uses the Future Walking KE and PE so
	that it produces several virial ratios.
	
5.	QMCFlags just gives a warning if it gets a flag it doesn't know
	about. It used to exit.
	
6.	QMcBeaver can now process some system signals! Previously, a QMcBeaver
	process would crash if it ever received a signal from the system. Now,
	by default as set in QMcBeaver.cpp, it will trap SIGUSR1 and signal 40.
	If SIGUSR1 is sent to a QMcBeaver process, it will immediately seek to
	reduce the calculation data across all processes, and then print all that