@@ -1,3 +1,12 @@
+Fri, 26 May 2006 Daniel R. Fisher
+1.  Changed the way electrons are distributed among the nuclei in 
+    QMCDansWalkerInitialization.  In calculations on He2, it was
+    putting two alpha electrons on one He and two betas on the other.
+
+2.  In QMCFunctions::calculateModifiedGradPsiRatio(), put in a check
+    for very small electron velocity.  It was causing a division by
+    zero and crashing calculations.
+
 Mon, 22 May 2006 Amos Anderson
 1.	Fixed a bug in gamess2qmcbeaver.py. It was mistakenly identifying
 	bohr geometries as angstroms.
